force-app/main/default/objects/GTM_Page_Content__c/GTM_Page_Content__c.object-meta.xml
<CustomObject>
    <label>GTM Page Content</label>
    <nameField>
        <displayFormat>CMS-{00000}</displayFormat>
        <label>Content Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GTM Page Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>