force-app/main/default/objects/GTM_Page_Content__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mirrors the archived state of the offering's tile GTM_Page_Section__c row (Section_Key__c='tile', Template_Type__c='offerings-listing') that shares this record's Offering_Key__c. Set by GtmPageSectionArchiveCascade's cascade, not edited directly -- see docs/architecture/offering-archive-cascade.md.</description>
    <inlineHelpText>Soft-archives this content row along with its offering. Set by the offering&apos;s tile archive cascade, not edited directly.</inlineHelpText>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>