force-app/main/default/objects/GTM_Page_Content__c/fields/Archived_Date__c.field-meta.xml
<CustomField>
    <fullName>Archived_Date__c</fullName>
    <description>Stamped automatically when Archived__c changes value on this record (see GtmPageContentArchiveStamp.trigger and the cascade from GtmPageSectionArchiveCascade.trigger). Never set by hand, and never re-stamped when Archived__c is written with the value it already has.</description>
    <label>Archived Date</label>
    <type>DateTime</type>
</CustomField>