force-app/main/default/objects/GTM_Page_Content__c/fields/Css_Class__c.field-meta.xml
<CustomField>
    <fullName>Css_Class__c</fullName>
    <inlineHelpText>The class attribute applied to this field's element on render. Space-separated, like a class attribute.</inlineHelpText>
    <label>CSS Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>