force-app/main/default/objects/GTM_Page_Content__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <description>Which value column holds the content: text | rich | json. Determines which field the LWC reads and how the Manager app renders the editor control.</description>
    <label>Field Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>rich</fullName>
                <label>Rich Text</label>
            </value>
            <value>
                <fullName>json</fullName>
                <label>JSON (Structured)</label>
            </value>
            <value>
                <fullName>icontext</fullName>
                <label>Button (label + icon)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>