force-app/main/default/objects/GTM_Page_Content__c/fields/Html_Id__c.field-meta.xml
<CustomField>
    <fullName>Html_Id__c</fullName>
    <inlineHelpText>The id attribute applied to this field's element on render. Makes the element addressable for deep links and anchors.</inlineHelpText>
    <label>HTML Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>