force-app/main/default/objects/GTM_Page_Content__c/fields/Inline_Style__c.field-meta.xml
<CustomField>
    <fullName>Inline_Style__c</fullName>
    <inlineHelpText>Inline CSS applied to this field's element on render, for one-off adjustments that do not warrant a class.</inlineHelpText>
    <label>Inline Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>