force-app/main/default/objects/GTM_Page_Content__c/fields/Offering_Key__c.field-meta.xml
<CustomField>
    <fullName>Offering_Key__c</fullName>
    <description>Developer name of the offering (e.g. ma-migrator). Matches GTM_Offering__mdt.Offering_Key__c.</description>
    <label>Offering Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>