force-app/main/default/objects/GTM_Page_Content__c/fields/Text_Value__c.field-meta.xml
<CustomField>
    <fullName>Text_Value__c</fullName>
    <description>Plain-text or short HTML content. Used for headlines, labels, chips (pipe-delimited), and other single-line or short multi-line values.</description>
    <label>Text Value</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>